--- a/impostor.html
+++ b/impostor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>El Impostor</title>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap uoCSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -440,7 +440,7 @@
     <script>
         // --- API KEY GESTIONADA POR GITHUB ACTIONS ---
         // En local estará vacía. Al desplegar, GitHub la rellenará.
-        const injectedApiKey = "AIzaSyBnan8Ka5OQVQfzRQmsFbxpsFyQfMbcmoE";
+        const injectedApiKey = "AIzaSyDDCkVaJbha_k_mzabcFM7mHhRe3UMXFbc";
 
         // --- BASE DE DATOS DE RESPALDO (FALLBACK) ---
         const FALLBACK_WORDS = [
